--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">My Application syntaxx</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="button">Weiter</string>
+    <string name="textviewWeiter">Drücke den Weiter-Button</string>
+    <string name="textviewZurück">Drücke den Zurück-Button</string>
+
+    <string name="button2">Zurück</string>
 </resources>
